# dash-calc

./: .coverage  .gitignore  pyproject.toml
dash_calc/: app.py  callbacks.py  data.py  figures.py  layout.py
dash_calc/domain/: model.py
dash_calc/services/: parse.py  parse_xml.py
docs/: domain.puml
tests/: test_dash_calc.py
tests/dash_calc/domain/services/: conftest.py  test_parse.py
