[tool.poetry]
name = "dash_calc"
version = "0.1.0"
description = ""
authors = ["Joseph Beaver <joseph.beaver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.5.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
dash-bootstrap-components = "^1.1.0"
xarray = "^2022.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
