[tool.poetry]
name = "dash_calc"
version = "0.1.0"
description = ""
authors = ["Joseph Beaver <joseph.beaver@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
dash = "^2.5.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
dash-bootstrap-components = "^1.1.0"
xarray = "^2022.3.0"
scipy = "^1.8.1"
dash-core-components = "^2.0.0"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
attrs = "^21.4.0"
h5py = "^3.7.0"
pylint = "^2.15.0"
pyvista = "^0.38.5"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
