[tool.poetry]
name = "dash_calc"
version = "0.1.0"
description = ""
authors = ["Joseph Beaver <joseph.beaver@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
dash = "^2.5.0"
pandas = "^1.4.2"
numpy = "^1.22.4"
dash-bootstrap-components = "^1.1.0"
xarray = "^2022.3.0"
scipy = "^1.8.1"
dash-core-components = "^2.0.0"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
attrs = "^21.4.0"
h5py = "^3.7.0"
pylint = "^2.15.0"
pyvista = "^0.38.5"
streamlit = "^1.22.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.264"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.2.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.pydocstyle]
convention = "numpy"
